added aws gem and configs

--- a/app/views/welcome/showcase.html.erb
+++ b/app/views/welcome/showcase.html.erb
@@ -27,12 +27,12 @@
   <h3>Using HTML, CSS and Bootstrap</h3>
   <div class="col-md-6">
     <div class="panel-body">
-  <%= image_tag "hometown_eatsHTML", :size => "550x400" %>
+  <%= image_tag "hometown_eatsHTML.png", :size => "550x400" %>
     </div>
   </div>
   <div class="col-md-6">
     <div class="panel-body">
-  <%= image_tag "my_kitchenHTML", :size => "550x400" %>
+  <%= image_tag "my_kitchenHTML.png", :size => "550x400" %>
     </div>
   </div>
   </p>
@@ -42,14 +42,14 @@
     <div class="panel-body">
       <h2>Twitter Dupe</h2>
     <h3>Using HTML, CSS and Bootstrap</h3>
-    <%= image_tag "HTML_TwitterDupe", :size => "550x400" %>
+    <%= image_tag "HTML_TwitterDupe.png", :size => "550x400" %>
     </div>
   </div>
   <div class="col-md-6">
   <div class="panel-body">  
     <h2>Rock, Paper, Scissors Game</h2>
     <h3>Using HTML, CSS and Javascript</h3>
-    <%= image_tag "RPS_game_HTML_JS", :size => "550x400" %>
+    <%= image_tag "RPS_game_HTML_JS.png", :size => "550x400" %>
     </div>
   </div>
   </p>
@@ -59,14 +59,14 @@
     <h2>Weather App</h2>
     <h3>Using Ruby on Rails (ROR) and Wunderground API</h3>
   
-    <%= image_tag "weather_app2", :size => "550x400" %>
+    <%= image_tag "weather_app2.png", :size => "550x400" %>
     </div>
   </div>
   <div class="col-md-6">
     <div class="panel-body">
       <h2>To Do List App</h2>
     <h3>Using ROR and AJAX</h3>
-    <%= image_tag "tasks2", :size => "550x400" %>
+    <%= image_tag "tasks2.png", :size => "550x400" %>
     </div>
   </div>
   </p>
@@ -77,19 +77,19 @@
     <div class="panel-body">
     
   
-    <%= image_tag "blog_1", :size => "425x400" %>
+    <%= image_tag "blog_1.png", :size => "425x400" %>
     </div>
   </div>
   <div class="col-md-4">
     <div class="panel-body">
       
-    <%= image_tag "blog3", :size => "425x400" %>
+    <%= image_tag "blog3.png", :size => "425x400" %>
     </div>
   </div>
   <div class="col-md-4">
     <div class="panel-body">
       
-    <%= image_tag "blog4", :size => "425x400" %>
+    <%= image_tag "blog4.png", :size => "425x400" %>
     </div>
   </div>
   </p>
@@ -100,19 +100,19 @@
     <div class="panel-body">
     
   
-    <%= image_tag "eCommerce1", :size => "425x400" %>
+    <%= image_tag "eCommerce1.png", :size => "425x400" %>
     </div>
   </div>
   <div class="col-md-4">
     <div class="panel-body">
       
-    <%= image_tag "eCommerce2", :size => "425x400" %>
+    <%= image_tag "eCommerce2.png", :size => "425x400" %>
     </div>
   </div>
   <div class="col-md-4">
     <div class="panel-body">
       
-    <%= image_tag "eCommerce3", :size => "425x400" %>
+    <%= image_tag "eCommerce3.png", :size => "425x400" %>
     </div>
   </div>
   </p>
