--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -32,7 +32,7 @@
 <li>MS in Physics</li>
 <li>PhD in Energy and Environmental Systems.</li>
 </ol>
-<%= image_tag "grad17.jpg", :size => "300x350" %>
+<i class="fa fa-5x fa-graduation-cap" aria-hidden="true"></i>
 <br>
 
 My undergraduate degree was okay, I applied for enough scholarships and internships to cover all of my expenses even after the recession. I received fellowhip funds for graduate school, however, sources began to completely dry up due to budget cuts and that is when my stress levels began to rise. Securing loans, credit cards, becoming a TA in math and physics along with juggling the road blocks of research was definitely overwhelming, but I survived. If you would like to read the first article I ever published <button class "btn"><a href="https://www.hindawi.com/journals/amete/2017/6301026/" target="_blank">click here.</a></button>
@@ -49,7 +49,7 @@ My undergraduate degree was okay, I applied for enough scholarships and internsh
 		<li>NMFS</li>
 		<li>and the NWS.</li>
 	  </ul> 
-        <%= image_tag "ams17_pic.jpg", :size => "320x300" %>
+     <i class="fa fa-5x fa-briefcase" aria-hidden="true"></i>  
         <br>
 
 	  Since internships are only a temporary source of income, finding the next source of income can be stressful. However, it was definitely less stressful than academia. I would give work life a stress level of 2.75 out of 5. 
@@ -67,9 +67,10 @@ My undergraduate degree was okay, I applied for enough scholarships and internsh
  I got started with the free websites first, which were a big help. It gave me the opportunity to get my feet wet with coding on my own time and at my own pace. Once I got the hang of things, I paid for bootcamp courses that taught me new programming languages at a faster pace. My first programming language I ever learned was Fortran back in my undergraduate days. What I have learned is that once you learn one programming language, it becomes easier to learn others. The concepts are the same, however, the syntax may slightly differ.
   My stress levels are a lot lower these days (1.5 out of 5), because I enjoy creating web applications. I love to help others share or communicate their ideas and talents on the web for the world to see. Also, I am looking forward to eventually starting my own business, building my own brand and self publishing my own books...my future is bright!
 </p> 
-<%= image_tag "nyc.jpg", :size => "325x225" %>
+<i class="fa fa-5x fa-code" aria-hidden="true"></i>
+
 <br>
-<p>Check out my showcase page to see what I have been working on thus far.</p>
+
      </div>
    </div>
  </div>
