--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -25,7 +25,7 @@
 If there are any questions, comments or concerns feel free to contact me. I can be reached via email at stephany_m_taylor@yahoo.com
 </h2>  
 <h3 class="text-center">
-Also feel free to check out my social media pages, just click the folowing links to be redirected: <br>
+Also feel free to check out my social media pages, just click the following links to be redirected: <br>
  <div class="wrapper">
   <a class="fa fa-5x fa-github-square" href="https://github.com/staylor1988" target="_blank"></a><br>
   <a class="fa fa-5x fa-codepen" href="https://codepen.io/taylor88/" target="_blank"></a><br>
