--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -52,7 +52,7 @@
     <div class="col-md-6">
        <div class="panel-body">
       
-    	<%= image_tag "Headshot.jpg", :size => "450x550" %>
+    	<%= image_tag "nyc.jpg", :size => "450x550" %>
       
       
          </div>
