--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -35,4 +35,8 @@ Also feel free to check out my social media pages, just click the following link
   
 </div>
 </h3>
+
+<h2>Thanks for by, hope you enjoyed the view!<br>
+<%= image_tag "nyc.jpg", :size => "700x700" %>
+</h2>
 </p>
