--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 @import "font-awesome";
 
 body {
-  background-color: skyblue;
+  background-color: steelblue;
 }
 .jumbotron {
 	background-color: ghostwhite;
@@ -35,3 +35,4 @@ h2 {
 h3 {
 	text-align: center;
 }
+
