--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -27,25 +27,26 @@
    <div class="row">
       <div class="col-md-3">
          <div class="panel-heading"><h3>Purpose</h3></div>
-       <p>The purpose of this web site is to showcase some of the many projects that I have created thus far. Coding gets easier once you get proper training and/or practice. So far, I have learned 
-  <strong>    
+          <strong> 
+       <p>The purpose of this website is to showcase some of the many projects that I have created thus far. Coding gets easier once you get proper training and/or practice. So far, I have learned 
+    
 <ol><li><button class="btn-dark"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">HTML,</a></button></li>
 <li><button class="btn-dark"><a href="https://www.w3schools.com/Css/" target="_blank">CSS,</a></button></li>
 <li><button class="btn-dark"><a href="https://getbootstrap.com/docs/3.3/getting-started/" target="_blank">Bootstrap,</a></button></li>
 <li><button class="btn-dark"><a href="http://jquery.com" target="_blank">jQuery,</a></button></li>
 <li><button class="btn-dark"><a href="https://git-scm.com/documentation" target="_blank">Git</a></button></li>
-<li><button class="btn-dark"><a href="https://www.w3schools.com/jsref/" target="_blank"> and Javascript.</a></button></li>
+<li><button class="btn-dark"><a href="https://www.w3schools.com/jsref/" target="_blank">and JavaScript.</a></button></li>
 </ol>
     I am currently learning 
-<strong>  
+  
 	<ul>
 		<li><button class="btn-dark"><a href="https://www.python.org/doc/" target="_blank">Python,</a></button></li>
 		<li><button class="btn-dark"><a href="http://ruby-doc.org" target="_blank">Ruby</a></button></li>
-		<li><button class="btn-dark"><a href="http://guides.rubyonrails.org" target="_blank"> and Rails.</a></button></li>
+		<li><button class="btn-dark"><a href="http://guides.rubyonrails.org" target="_blank">and Rails.</a></button></li>
 	</ul>  
-  </strong>   
+    
 	Continuing to learn new programming skills will certainly help to build an even better portfolio. Each list item that I provide on this page will link to some form of associated documentation.
-</p>
+</p></strong> 
          </div>
   
     <div class="col-md-6">
@@ -59,25 +60,26 @@
       <div class="col-md-3">
         
         <div class="panel-heading"><h3> Resources </h3></div>
-        
+        <strong>
        <p>
 This section covers some of the free and paid resources that I used to start building websites. Hopefully, this information is helpful for anyone who is starting out and wants to know where to look. These are the free online resources that I used:
-<strong>
+
 <ul>
+    <li><button class="btn-dark"><a href="https://alison.com/" target="_blank">Alison</a></button></li>
 		<li><button class="btn-dark"><a href="https://www.codecademy.com" target="_blank">Codecademy</a></button></li>
 		<li><button class="btn-dark"><a href="https://www.freecodecamp.org" target="_blank">and Free Code Camp.</a></button></li>
 	</ul> 
-</strong>    
+   
 These are the resources that I paid for:
-<strong>
+
 <ul>
 		<li><button class="btn-dark"><a href="https://www.thedataincubator.com" target="_blank">The Data Incubator (Foundations Course)</a></button></li>
 		<li><button class="btn-dark"><a href="https://www.techtalentsouth.com" target="_blank">and Tech Talent South (Code Immersion Course).</a></button></li>
 	</ul>  
-</strong>
+
  Plenty of reviews concerning these resources are already available online if you'd like to dig a bit further.
 </p> 
-    
+  </strong>  
    </div>
  </div>
 </div>
