--- a/app/views/welcome/showcase.html.erb
+++ b/app/views/welcome/showcase.html.erb
@@ -48,7 +48,7 @@
   <div class="col-md-6">
   <div class="panel-body">  
     <h2>Rock, Paper, Scissors Game</h2>
-    <h3>Using HTML, CSS and Javascript</h3>
+    <h3>Using HTML, CSS and JavaScript</h3>
     <%= image_tag "RPS_game_HTML_JS.png", :size => "550x400" %>
     </div>
   </div>
@@ -59,7 +59,7 @@
     <h2>Weather App</h2>
     <h3>Using Ruby on Rails (ROR) and Wunderground API</h3>
   
-    <%= image_tag "weather_app2.png", :size => "550x400" %>
+    <%= image_tag "weather_app.png", :size => "550x400" %>
     </div>
   </div>
   <div class="col-md-6">
