--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -25,7 +25,9 @@
 <div class="container">
    <div class="row">
       <div class="col-md-4">
+        <strong>
 <div class="panel-heading"><h3>Academic Life</h3></div>
+
 <p> I would give the stress levels of academia a 4.5 out of 5. Here is a bit of background:
 <ol>	
 <li>BS in Meteorology</li>
@@ -65,10 +67,10 @@ My undergraduate degree was okay, I applied for enough scholarships and internsh
        <p>
  Once I graduated, the environmental jobs began to dry up due to budget cuts under an administration who termed it as "draining the swamp." I believe everything happens for a reason and even though my job outlook was grim, I decided to retrain myself to code. 
  I got started with the free websites first, which were a big help. It gave me the opportunity to get my feet wet with coding on my own time and at my own pace. Once I got the hang of things, I paid for bootcamp courses that taught me new programming languages at a faster pace. My first programming language I ever learned was Fortran back in my undergraduate days. What I have learned is that once you learn one programming language, it becomes easier to learn others. The concepts are the same, however, the syntax may slightly differ.
-  My stress levels are a lot lower these days (1.5 out of 5), because I enjoy creating web applications. I love to help others share or communicate their ideas and talents on the web for the world to see. Also, I am looking forward to eventually starting my own business, building my own brand and self publishing my own books...my future is bright!
+  My stress levels are a lot lower these days (1.5 out of 5), because I enjoy creating web applications. I love to help others share or communicate their ideas and talents on the web for the world to see. Also, I am looking forward to eventually starting my own business, building my own brand and self publishing my own books...the future is bright!
 </p> 
 <i class="fa fa-5x fa-code" aria-hidden="true"></i>
-
+</strong>
 <br>
 
      </div>
