--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -55,9 +55,10 @@ My undergraduate degree was okay, I applied for enough scholarships and internsh
         <br>
 
 	  Since internships are only a temporary source of income, finding the next source of income can be stressful. However, it was definitely less stressful than academia. I would give work life a stress level of 2.75 out of 5. 
-      </p>
+      
       <br>
-      <p>To read another article that features me <button class "btn"><a href="https://www2.ucar.edu/atmosnews/in-brief/4516/right-chemistry" target="_blank">click here.</a></button></p>
+      To read another article that features me <button class "btn"><a href="https://www2.ucar.edu/atmosnews/in-brief/4516/right-chemistry" target="_blank">click here.</a></button>
+    </p>
     </div>
       
       <div class="col-md-4">
