--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -52,7 +52,7 @@
     <div class="col-md-6">
        <div class="panel-body">
       
-    	<%= image_tag "ss.png", :size => "515x450" %>
+    	<%= image_tag "ss.png", :size => "525x525" %>
       
       
          </div>
@@ -74,7 +74,7 @@ These are the resources that I paid for:
 
 <ul>
 		<li><button class="btn-dark"><a href="https://www.thedataincubator.com" target="_blank">The Data Incubator (Foundations Course)</a></button></li>
-		<li><button class="btn-dark"><a href="https://www.techtalentsouth.com" target="_blank">and Tech Talent South (Code Immersion Course).</a></button></li>
+		<li><button class="btn-dark"><a href="https://www.techtalentsouth.com" target="_blank">and Tech Talent South (Full-Time Code Immersion Course).</a></button></li>
 	</ul>  
 
  Plenty of reviews concerning these resources are already available online if you'd like to dig a bit further.
