--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -52,12 +52,9 @@ My undergraduate degree was okay, I applied for enough scholarships and internsh
 		<li>and the NWS.</li>
 	  </ul> 
      <i class="fa fa-5x fa-briefcase" aria-hidden="true"></i>  
-        <br>
-
-	  Since internships are only a temporary source of income, finding the next source of income can be stressful. However, it was definitely less stressful than academia. I would give work life a stress level of 2.75 out of 5. 
-      
-      <br>
-      To read another article that features me <button class "btn"><a href="https://www2.ucar.edu/atmosnews/in-brief/4516/right-chemistry" target="_blank">click here.</a></button>
+        <br></strong>
+     <strong>
+	  Since internships are only a temporary source of income, finding the next source of income can be stressful. However, it was definitely less stressful than academia. I would give work life a stress level of 2.75 out of 5. To read another article that features me <button class "btn"><a href="https://www2.ucar.edu/atmosnews/in-brief/4516/right-chemistry" target="_blank">click here.</a></button>
     </p>
     </div>
       
