--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -31,7 +31,7 @@ Also feel free to check out my social media pages, just click the following link
   <a class="fa fa-5x fa-codepen" href="https://codepen.io/taylor88/" target="_blank"></a><br>
   <a class="fa fa-5x fa-linkedin-square" href="https://www.linkedin.com/in/stephany-taylor-5b4778152/" target="_blank"></a><br>
   <!-- <a class="fa fa-5x fa-facebook-square" href="https://www.facebook.com/profile.php?id=100022167221072" target="_blank"></a><br>-->
-  <a class="fa fa-5x fa-instagram" href="https://www.instagram.com/taylormadeunique/" target="_blank"></a><br>
+  <!--<a class="fa fa-5x fa-instagram" href="https://www.instagram.com/taylormadeunique/" target="_blank"></a><br>-->
   
 </div>
 </h3>
