fixed broken FF links

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -37,7 +37,7 @@
 <i class="fa fa-5x fa-graduation-cap" aria-hidden="true"></i>
 <br>
 
-My undergraduate degree was okay, I applied for enough scholarships and internships to cover all of my expenses even after the recession. I received fellowhip funds for graduate school, however, sources began to completely dry up due to budget cuts and that is when my stress levels began to rise. Securing loans, credit cards, becoming a TA in math and physics along with juggling the road blocks of research was definitely overwhelming, but I survived. If you would like to read the first article I ever published <button class "btn"><a href="https://www.hindawi.com/journals/amete/2017/6301026/" target="_blank">click here.</a></button>
+My undergraduate degree was okay, I applied for enough scholarships and internships to cover all of my expenses even after the recession. I received fellowhip funds for graduate school, however, sources began to completely dry up due to budget cuts and that is when my stress levels began to rise. Securing loans, credit cards, becoming a TA in math and physics along with juggling the road blocks of research was definitely overwhelming, but I survived. If you would like to read the first article I ever published <a href="https://www.hindawi.com/journals/amete/2017/6301026/" target="_blank"><button class "btn">click here.</button></a>
    
 </p>
          </div>
@@ -54,7 +54,7 @@ My undergraduate degree was okay, I applied for enough scholarships and internsh
      <i class="fa fa-5x fa-briefcase" aria-hidden="true"></i>  
         <br></strong>
      <strong>
-	  Since internships are only a temporary source of income, finding the next source of income can be stressful. However, it was definitely less stressful than academia. I would give work life a stress level of 2.75 out of 5. To read another article that features me <button class "btn"><a href="https://www2.ucar.edu/atmosnews/in-brief/4516/right-chemistry" target="_blank">click here.</a></button>
+	  Since internships are only a temporary source of income, finding the next source of income can be stressful. However, it was definitely less stressful than academia. I would give work life a stress level of 2.75 out of 5. To read another article that features me <a href="https://www2.ucar.edu/atmosnews/in-brief/4516/right-chemistry" target="_blank"><button class "btn">click here.</button></a>
     </p>
     </div>
       
