--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -30,19 +30,19 @@
           <strong> 
        <p>The purpose of this website is to showcase some of the many projects that I have created thus far. Coding gets easier once you get proper training and/or practice. So far, I have learned 
     
-<ol><li><button class="btn-dark"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">HTML,</a></button></li>
-<li><button class="btn-dark"><a href="https://www.w3schools.com/Css/" target="_blank">CSS,</a></button></li>
-<li><button class="btn-dark"><a href="https://getbootstrap.com/docs/3.3/getting-started/" target="_blank">Bootstrap,</a></button></li>
-<li><button class="btn-dark"><a href="http://jquery.com" target="_blank">jQuery,</a></button></li>
-<li><button class="btn-dark"><a href="https://git-scm.com/documentation" target="_blank">Git</a></button></li>
-<li><button class="btn-dark"><a href="https://www.w3schools.com/jsref/" target="_blank">and JavaScript.</a></button></li>
+<ol><li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank"><button class="btn-dark">HTML,</button></a></li>
+<li><a href="https://www.w3schools.com/Css/" target="_blank"><button class="btn-dark">CSS,</button></a></li>
+<li><a href="https://getbootstrap.com/docs/3.3/getting-started/" target="_blank"><button class="btn-dark">Bootstrap,</button></a></li>
+<li><a href="http://jquery.com" target="_blank"><button class="btn-dark">jQuery,</button></a></li>
+<li><a href="https://git-scm.com/documentation" target="_blank"><button class="btn-dark">Git</button></a></li>
+<li><a href="https://www.w3schools.com/jsref/" target="_blank"><button class="btn-dark">and JavaScript.</button></a></li>
 </ol>
     I am currently learning 
   
 	<ul>
-		<li><button class="btn-dark"><a href="https://www.python.org/doc/" target="_blank">Python,</a></button></li>
-		<li><button class="btn-dark"><a href="http://ruby-doc.org" target="_blank">Ruby</a></button></li>
-		<li><button class="btn-dark"><a href="http://guides.rubyonrails.org" target="_blank">and Rails.</a></button></li>
+		<li><a href="https://www.python.org/doc/" target="_blank"><button class="btn-dark">Python,</button></a></li>
+		<li><a href="http://ruby-doc.org" target="_blank"><button class="btn-dark">Ruby</button></a></li>
+		<li><a href="http://guides.rubyonrails.org" target="_blank"><button class="btn-dark">and Rails.</button></a></li>
 	</ul>  
     
 	Continuing to learn new programming skills will certainly help to build an even better portfolio. Each list item that I provide on this page will link to some form of associated documentation.
@@ -65,16 +65,16 @@
 This section covers some of the free and paid resources that I used to start building websites. Hopefully, this information is helpful for anyone who is starting out and wants to know where to look. These are the free online resources that I used:
 
 <ul>
-    <li><button class="btn-dark"><a href="https://alison.com/" target="_blank">Alison</a></button></li>
-		<li><button class="btn-dark"><a href="https://www.codecademy.com" target="_blank">Codecademy</a></button></li>
-		<li><button class="btn-dark"><a href="https://www.freecodecamp.org" target="_blank">and Free Code Camp.</a></button></li>
+    <li><a href="https://alison.com/" target="_blank"><button class="btn-dark">Alison</button></a></li>
+		<li><a href="https://www.codecademy.com" target="_blank"><button class="btn-dark">Codecademy</button></a></li>
+		<li><a href="https://www.freecodecamp.org" target="_blank"><button class="btn-dark">and Free Code Camp.</button></a></li>
 	</ul> 
    
 These are the resources that I paid for:
 
 <ul>
-		<li><button class="btn-dark"><a href="https://www.thedataincubator.com" target="_blank">The Data Incubator (Foundations Course)</a></button></li>
-		<li><button class="btn-dark"><a href="https://www.techtalentsouth.com" target="_blank">and Tech Talent South (Full-Time Code Immersion Course).</a></button></li>
+		<li><a href="https://www.thedataincubator.com" target="_blank"><button class="btn-dark">The Data Incubator (Foundations Course)</button></a></li>
+		<li><a href="https://www.techtalentsouth.com" target="_blank"><button class="btn-dark">and Tech Talent South (Full-Time Code Immersion Course).</button></a></li>
 	</ul>  
 
  Plenty of reviews concerning these resources are already available online if you'd like to dig a bit further.
